@@ -36,6 +36,10 @@ Features
 - Projects generated by the paster templates now use the
   ``DummyTemplateRenderer.assert_`` method in their view tests.
 
+- Make the (internal) thread local registry manager maintain a stack
+  of registries in order to make it possible to call one BFG
+  application from inside another.
+
 Bug Fixes
 ---------
 
